# CouchDB2

./: .gitignore  LICENSE  README.md  couchdb2.py  requirements.txt  settings.json  setup.cfg  setup.py  test_couchdb2.py
CouchDB2.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
