[metadata]
name = CouchDB2
version = 1.9.4
author = Per Kraulis
author_email = per.kraulis@scilifelab.se
description = CouchDB v2.x Python 3 interface in a single module. Also a command line tool.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pekrau/CouchDB2
project_urls =
    Bug Tracker = https://github.com/pekrau/CouchDB2/issues
py_modules = couchdb2
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
install_requires =
    requests>=2
